--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-03-08 14:10+0200\n"
+"PO-Revision-Date: 2013-03-08 21:26+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1020,7 +1020,7 @@ msgstr "Carmen J, Lima"
 #: ../code/application/views/includes/testimonials.php:39
 msgid "Choix, prix, sécurité, confirmation. Rien a dire : site super ! "
 msgstr ""
-"Selección, precio, seguridad, confirmación... Nada más que decir: gran sitio!"
+"Selección, precio, seguridad, confirmación… Nada más que decir: gran sitio!"
 
 #: ../code/application/views/includes/testimonials.php:46
 #: ../code/application/views/includes/testimonials.php:48
@@ -3254,7 +3254,7 @@ msgstr "Rango de Precio:"
 #: ../code/application/views/helpfile/pofields.php:658
 #, php-format
 msgid "Rating"
-msgstr "Evaluación"
+msgstr "Clasificación"
 
 #: ../code/application/views/city_view.php:43
 #: ../code/application/views/helpfile/pofields.php:458
@@ -3304,7 +3304,7 @@ msgstr "Campamento"
 #: ../code/application/views/helpfile/pofields.php:660
 #, php-format
 msgid "Facilities"
-msgstr "Servicios"
+msgstr "Instalaciones"
 
 #: ../code/application/views/city_view.php:82
 #: ../code/application/views/city_view.php:249
@@ -5417,7 +5417,7 @@ msgid ""
 "You must pay for the whole private room, even if you do not need all the "
 "beds. The room can not be shared."
 msgstr ""
-"Usted de debera pagar por toda la habitación privada aunque no necesite "
+"Usted de deberá pagar por toda la habitación privada aunque no necesite "
 "todas las camas."
 
 #: ../code/application/views/helpfile/pofields.php:170
@@ -7018,7 +7018,7 @@ msgid ""
 msgstr ""
 "Para armar su presupuesto, lo invitamos a ver la lista de hostales y precios "
 "en nuestra página web  y a que nos contacte nuevamente, 1 semana antes de "
-"tomar su decisión,   cuando todos los detalles esten finalizados. "
+"tomar su decisión,   cuando todos los detalles estén finalizados. "
 
 #: ../code/application/views/helpfile/pofields.php:592
 #, php-format
@@ -7208,12 +7208,12 @@ msgstr "Habitaciones Privadas desde %d"
 #: ../code/application/views/helpfile/pofields.php:639
 #, php-format
 msgid "Rating Overall"
-msgstr "Puntuación Total"
+msgstr "Evaluación Total"
 
 #: ../code/application/views/helpfile/pofields.php:642
 #, php-format
 msgid "Site"
-msgstr "Sitio"
+msgstr "Edificio"
 
 #: ../code/application/views/helpfile/pofields.php:644
 #, php-format
@@ -7280,7 +7280,7 @@ msgstr "Restaurar todo"
 #: ../code/application/views/helpfile/pofields.php:659
 #, php-format
 msgid "Compare (%d out of %d)"
-msgstr "Compara ( %d de %d)"
+msgstr "Compara (%d de %d)"
 
 #: ../code/application/views/helpfile/pofields.php:661
 #, php-format
