--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-03-08 14:11+0200\n"
+"PO-Revision-Date: 2013-03-08 21:26+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -958,7 +958,7 @@ msgstr ""
 "costo. %s ofrece reservas de última hora a muy bajo costo y alojamientos en "
 "ciudades como París, Francia, Londres, Inglaterra, Barcelona, España, Nueva "
 "York, Estados Unidos, Roma, Italia, Países Bajos, Amsterdam, Dublín, Madrid, "
-"España, República Checa, Praga ..."
+"España, República Checa, Praga …"
 
 #: ../code/application/views/includes/footer.php:105
 msgid "Hostelworld customer review"
@@ -3255,7 +3255,7 @@ msgstr "Rango de Precio:"
 #: ../code/application/views/helpfile/pofields.php:658
 #, php-format
 msgid "Rating"
-msgstr "Evaluación"
+msgstr "Clasificación"
 
 #: ../code/application/views/city_view.php:43
 #: ../code/application/views/helpfile/pofields.php:458
@@ -3305,7 +3305,7 @@ msgstr "Campamento"
 #: ../code/application/views/helpfile/pofields.php:660
 #, php-format
 msgid "Facilities"
-msgstr "Servicios"
+msgstr "Instalaciones"
 
 #: ../code/application/views/city_view.php:82
 #: ../code/application/views/city_view.php:249
@@ -6448,7 +6448,7 @@ msgid ""
 "protected by a secure connection."
 msgstr ""
 "Reservar en nuestra página web es seguro.  Cuando reserva con nosotros sus "
-"datos están protegidos por una conección segura."
+"datos están protegidos por una conexión segura."
 
 #: ../code/application/views/helpfile/pofields.php:423
 #, php-format
@@ -7016,7 +7016,7 @@ msgid ""
 msgstr ""
 "Para armar su presupuesto, lo invitamos a ver la lista de hostales y precios "
 "en nuestra página web  y a que nos contacte nuevamente, 1 semana antes de "
-"tomar su decisión,   cuando todos los detalles esten finalizados. "
+"tomar su decisión,   cuando todos los detalles estén finalizados. "
 
 #: ../code/application/views/helpfile/pofields.php:592
 #, php-format
@@ -7206,12 +7206,12 @@ msgstr "Habitaciones Privadas desde %d"
 #: ../code/application/views/helpfile/pofields.php:639
 #, php-format
 msgid "Rating Overall"
-msgstr "Puntuación Total"
+msgstr "Evaluación Total"
 
 #: ../code/application/views/helpfile/pofields.php:642
 #, php-format
 msgid "Site"
-msgstr "Sitio"
+msgstr "Edificio"
 
 #: ../code/application/views/helpfile/pofields.php:644
 #, php-format
@@ -7278,7 +7278,7 @@ msgstr "Restaurar todo"
 #: ../code/application/views/helpfile/pofields.php:659
 #, php-format
 msgid "Compare (%d out of %d)"
-msgstr "Compara ( %d de %d)"
+msgstr "Compara (%d de %d)"
 
 #: ../code/application/views/helpfile/pofields.php:661
 #, php-format
