--- a/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj_es.po
+++ b/languages/ci/locale/es_ES/LC_MESSAGES/auberge_lang_aj_es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Auberges\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-03-08 14:05+0200\n"
+"PO-Revision-Date: 2013-03-08 21:27+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -300,7 +300,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:238
 #, php-format
 msgid "Maximum refund per booking and per customer: US$100"
-msgstr "Devolución maáxima por reserva y por cliente: 100€."
+msgstr "Devolución máxima por reserva y por cliente: 100€."
 
 #: ../code/application/views/guarantee.php:47
 #: ../code/application/views/helpfile/pofields.php:239
@@ -678,7 +678,7 @@ msgstr "Buscar ahora"
 #: ../code/application/views/group_request.php:63
 #: ../code/application/views/group_request.php:65
 msgid "Chargement..."
-msgstr "Cargando ..."
+msgstr "Cargando …"
 
 #: ../code/application/views/includes/side_search_box.php:37
 #: ../code/application/views/includes/side_search_box.php:170
@@ -1185,7 +1185,7 @@ msgstr "100%% seguro."
 #: ../code/application/views/hb/booking_view.php:46
 msgid "Paiements sécurisés et encryptés pour votre sécurité."
 msgstr ""
-"Nuestro sistema de pagos funciona con códigos de encripción para su "
+"Nuestro sistema de pagos funciona con códigos de encoriación para su "
 "seguridad."
 
 #: ../code/application/views/includes/siteinfo.php:8
@@ -1764,8 +1764,8 @@ msgstr ""
 "tarjeta es inválida, sus reservaciones serán canceladas.  Si ha hecho su "
 "reserva con una tarjeta de débito bancario, o si usted sospecha que la "
 "tarjeta de crédito registrada se ha tornado inválida, por favor comuníquese "
-"con el provedor de servicios para reconfirmar sus reservaciones por lo menos "
-"24 horas antes de su llegada."
+"con el proveedor de servicios para reconfortar sus reservaciones por lo "
+"menos 24 horas antes de su llegada."
 
 #: ../code/application/views/mobile/hw/booking_end_view.php:230
 #: ../code/application/views/mobile/hw/booking_end_view.php:240
@@ -3255,7 +3255,7 @@ msgstr "Rango de Precio:"
 #: ../code/application/views/helpfile/pofields.php:658
 #, php-format
 msgid "Rating"
-msgstr "Evaluación"
+msgstr "Clasificación"
 
 #: ../code/application/views/city_view.php:43
 #: ../code/application/views/helpfile/pofields.php:458
@@ -3305,7 +3305,7 @@ msgstr "Campamento"
 #: ../code/application/views/helpfile/pofields.php:660
 #, php-format
 msgid "Facilities"
-msgstr "Servicios"
+msgstr "Instalaciones"
 
 #: ../code/application/views/city_view.php:82
 #: ../code/application/views/city_view.php:249
@@ -3970,7 +3970,7 @@ msgstr ""
 #: ../code/application/views/helpfile/pofields.php:640
 #, php-format
 msgid "Atmosphere"
-msgstr "Atmósfera"
+msgstr "Ambiente"
 
 #: ../code/application/views/hb/hostel_view.php:47
 #: ../code/application/views/helpfile/pofields.php:641
@@ -5374,7 +5374,7 @@ msgid ""
 msgstr ""
 "Asociaciones, cámaras de comercio, escuelas, universidades, campamentos de "
 "día, campamentos deportivos, pueblos jóvenes de servicio, oficinas de "
-"turismo, sindicatos, centros comunitarios, negocios ..."
+"turismo, sindicatos, centros comunitarios, negocios …"
 
 #: ../code/application/views/helpfile/pofields.php:159
 #, php-format
@@ -7032,7 +7032,7 @@ msgstr "Gracias por su confianza y apoyo."
 #: ../code/application/views/helpfile/pofields.php:594
 #, php-format
 msgid "Thank you for your request."
-msgstr "Gracias por su solucitud."
+msgstr "Gracias por su solicitud."
 
 #: ../code/application/views/helpfile/pofields.php:595
 #, php-format
@@ -7207,12 +7207,12 @@ msgstr "Habitaciones Privadas desde %d"
 #: ../code/application/views/helpfile/pofields.php:639
 #, php-format
 msgid "Rating Overall"
-msgstr "Puntuación Total"
+msgstr "Evaluación Total"
 
 #: ../code/application/views/helpfile/pofields.php:642
 #, php-format
 msgid "Site"
-msgstr "Sitio"
+msgstr "Edificio"
 
 #: ../code/application/views/helpfile/pofields.php:644
 #, php-format
@@ -7279,7 +7279,7 @@ msgstr "Restaurar todo"
 #: ../code/application/views/helpfile/pofields.php:659
 #, php-format
 msgid "Compare (%d out of %d)"
-msgstr "Compara ( %d de %d)"
+msgstr "Compara (%d de %d)"
 
 #: ../code/application/views/helpfile/pofields.php:661
 #, php-format
