--- a/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang_if.po
+++ b/languages/ci/locale/hu_HU/LC_MESSAGES/auberge_lang_if.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-03-06 22:05+0200\n"
+"PO-Revision-Date: 2013-03-08 22:53+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -946,7 +946,7 @@ msgstr ""
 "következő országokban: Magyarország, Németország, Franciaország, Belgium, "
 "Svájc és Kanada. Az %s  utolsó pillanatban is lefoglalható olcsó Hosteleket "
 "kínál olyan városokban, mint Párizs, London, Barcelona, New York, Róma, "
-"Amszterdam, Dublin, Madrid, Prága ... Segitséget nyújtunk gyors "
+"Amszterdam, Dublin, Madrid, Prága … Segitséget nyújtunk gyors "
 "információkkal, útmutatókkal és szállás értékelésekkel. * Hostelworld ügyfél "
 "felülvizsgálat"
 
@@ -3149,7 +3149,6 @@ msgstr ""
 "látványossághoz %s-ban."
 
 #: ../code/application/views/error400.php:10
-#, fuzzy
 msgid "Erreur 400 - Page Introuvable"
 msgstr "Hiba 404 - Az oldal nem található"
 
@@ -3258,7 +3257,7 @@ msgstr "Camping"
 #: ../code/application/views/helpfile/pofields.php:660
 #, php-format
 msgid "Facilities"
-msgstr "Szolgáltatások"
+msgstr "Felszereltség"
 
 #: ../code/application/views/city_view.php:82
 #: ../code/application/views/city_view.php:249
@@ -3413,7 +3412,7 @@ msgstr "További információk... "
 #: ../code/application/views/helpfile/pofields.php:686
 #, php-format
 msgid "Close"
-msgstr "Zárva"
+msgstr "Bezár"
 
 #: ../code/application/views/hw/hostel_view.php:330
 #: ../code/application/views/hw/hostel_view.php:538
@@ -3511,7 +3510,7 @@ msgstr "Keresés"
 #: ../code/application/views/hb/hostel_view.php:626
 #: ../code/application/views/mustache/property_list.php:248
 msgid "Recherche de disponibilités..."
-msgstr "Keresési lehetőségek..."
+msgstr "Keresési lehetőségek…"
 
 #: ../code/application/views/hw/hostel_view.php:629
 #: ../code/application/views/hb/hostel_view.php:855
@@ -6983,9 +6982,9 @@ msgid "Next available property"
 msgstr "A következő szabad ingatlan"
 
 #: ../code/application/views/helpfile/pofields.php:610
-#, fuzzy, php-format
+#, php-format
 msgid "of %s results"
-msgstr "Vissza az eredményhez"
+msgstr "találat a %s-ből"
 
 #: ../code/application/views/helpfile/pofields.php:611
 #, php-format
@@ -7096,12 +7095,12 @@ msgstr "Gyors Összehasonlítás"
 #: ../code/application/views/helpfile/pofields.php:637
 #, php-format
 msgid "Dorms From"
-msgstr "Kollégiumi szobák -ból"
+msgstr "Kollégiumi szobák -tól"
 
 #: ../code/application/views/helpfile/pofields.php:638
 #, php-format
 msgid "Privates From"
-msgstr "Magánszállások -ból"
+msgstr "Magánszállások -tól"
 
 #: ../code/application/views/helpfile/pofields.php:639
 #, php-format
@@ -7126,7 +7125,7 @@ msgstr "Eredmények"
 #: ../code/application/views/helpfile/pofields.php:648
 #, php-format
 msgid "Result"
-msgstr "Eredmény "
+msgstr "Eredmény"
 
 #: ../code/application/views/helpfile/pofields.php:649
 #, fuzzy, php-format
@@ -7165,150 +7164,152 @@ msgid "of %d results"
 msgstr "találat a %d-ből"
 
 #: ../code/application/views/helpfile/pofields.php:656
-#, fuzzy, php-format
+#, php-format
 msgid "Home"
-msgstr "Weboldal"
+msgstr "Kezdőoldal"
 
 #: ../code/application/views/helpfile/pofields.php:657
 #, php-format
 msgid "Restore Everything"
-msgstr ""
+msgstr "Mindent Tárol"
 
 #: ../code/application/views/helpfile/pofields.php:659
 #, php-format
 msgid "Compare (%d out of %d)"
-msgstr ""
+msgstr "Összehasonlítás (%d az %d-ből)"
 
 #: ../code/application/views/helpfile/pofields.php:661
 #, php-format
 msgid "Show More"
-msgstr ""
+msgstr "Mutasson Többet"
 
 #: ../code/application/views/helpfile/pofields.php:662
 #, php-format
 msgid "Show Less"
-msgstr ""
+msgstr "Mutasson Kevesebbet"
 
 #: ../code/application/views/helpfile/pofields.php:663
 #, php-format
 msgid "Not enough parameters"
-msgstr ""
+msgstr "Nincs elég paraméter"
 
 #: ../code/application/views/helpfile/pofields.php:664
-#, fuzzy, php-format
+#, php-format
 msgid "Fill in the email"
-msgstr "Térkép nyomtatás"
+msgstr "Adja meg az e-mail címet"
 
 #: ../code/application/views/helpfile/pofields.php:665
 #, php-format
 msgid "Invalid email recipient"
-msgstr ""
+msgstr "Érvénytelen e-mail tulajdonos"
 
 #: ../code/application/views/helpfile/pofields.php:666
 #, php-format
 msgid "Fill in the subject"
-msgstr ""
+msgstr "Írja be a tárgyat"
 
 #: ../code/application/views/helpfile/pofields.php:667
 #, php-format
 msgid "Fill in the message"
-msgstr ""
+msgstr "Írja be az üzenetet"
 
 #: ../code/application/views/helpfile/pofields.php:668
 #, php-format
 msgid "Fill in the \"From\" name"
-msgstr ""
+msgstr "Írja be a \"Feladó\" nevét"
 
 #: ../code/application/views/helpfile/pofields.php:669
 #, php-format
 msgid "Fill in the \"From\" email"
-msgstr ""
+msgstr "Írja be a \"Feladó\" e-mail címét"
 
 #: ../code/application/views/helpfile/pofields.php:670
-#, fuzzy, php-format
+#, php-format
 msgid "Invalid \"From\" email"
-msgstr "Érvénytelen forma "
+msgstr "Érvénytelen \"Feladó\" e-mail tulajdonos"
 
 #: ../code/application/views/helpfile/pofields.php:671
-#, fuzzy, php-format
+#, php-format
 msgid "Your message has been sent to %s"
-msgstr "Email elküldve a cimedre"
+msgstr "Az üzenet a %s elküldve"
 
 #: ../code/application/views/helpfile/pofields.php:672
 #, php-format
 msgid "From:"
-msgstr ""
+msgstr "Feladó:"
 
 #: ../code/application/views/helpfile/pofields.php:673
-#, fuzzy, php-format
+#, php-format
 msgid "To:"
-msgstr "Összesen:"
+msgstr "Címzett:"
 
 #: ../code/application/views/helpfile/pofields.php:674
 #, php-format
 msgid "Subject:"
-msgstr ""
+msgstr "Tárgy:"
 
 #: ../code/application/views/helpfile/pofields.php:675
-#, fuzzy, php-format
+#, php-format
 msgid "Message:"
-msgstr "Üzenet"
+msgstr "Üzenet:"
 
 #: ../code/application/views/helpfile/pofields.php:676
 #, php-format
 msgid "Send another message"
-msgstr ""
+msgstr "Másik üzenet küldése"
 
 #: ../code/application/views/helpfile/pofields.php:678
 #, php-format
 msgid ""
 "Mail this page to someone you know, or send it to yourself as a reminder."
-msgstr ""
+msgstr "Küldje el ezt az oldalt egy ismerősének, vagy önmagának emlékeztetőül."
 
 #: ../code/application/views/helpfile/pofields.php:679
 #, php-format
 msgid "To (email)"
-msgstr ""
+msgstr "To (email)"
 
 #: ../code/application/views/helpfile/pofields.php:680
 #, php-format
 msgid "Subject"
-msgstr ""
+msgstr "Tárgy "
 
 #: ../code/application/views/helpfile/pofields.php:682
-#, fuzzy, php-format
+#, php-format
 msgid "From (name)"
-msgstr "Keresztnév"
+msgstr "Feladó (név)"
 
 #: ../code/application/views/helpfile/pofields.php:683
 #, php-format
 msgid "From (email)"
-msgstr ""
+msgstr "Feladó (e-mail)"
 
 #: ../code/application/views/helpfile/pofields.php:684
 #, php-format
 msgid "Yes, I want to subscribe to the newsletter."
-msgstr ""
+msgstr "Igen, szeretnék feliratkozni a hírlevélre."
 
 #: ../code/application/views/helpfile/pofields.php:685
-#, fuzzy, php-format
+#, php-format
 msgid "Send email"
-msgstr "E-mail küldés"
+msgstr "E-mail küldése"
 
 #: ../code/application/views/helpfile/pofields.php:687
 #, php-format
 msgid "Share PDF"
-msgstr ""
+msgstr "PDF megosztása"
 
 #: ../code/application/views/helpfile/pofields.php:688
 #, php-format
 msgid "Want to send a PDF copy of this page or quote by email?"
 msgstr ""
+"Szeretne PDF formátumú másolatot küldeni e-mailen erről az oldalról vagy az "
+"ajánlatról? "
 
 #: ../code/application/views/helpfile/pofields.php:689
-#, fuzzy, php-format
+#, php-format
 msgid "Send PDF"
-msgstr "Küldés"
+msgstr "PDF küldése"
 
 #: ../code/application/views/helpfile/pofields.php:691
 #, php-format
@@ -7317,6 +7318,9 @@ msgid ""
 "continuing to browse our site you are agreeing to our Cookies Policy and use "
 "of cookies technology. Find out more"
 msgstr ""
+"We use cookies to give you the best possible experience on our site. By "
+"continuing to browse our site you are agreeing to our Cookies Policy and use "
+"of cookies technology. Find out more. Tudjon meg többet"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
@@ -7361,9 +7365,8 @@ msgstr "További informacio erről a szállásról"
 
 #: ../code/application/views/mustache/property_list.php:264
 #: ../code/application/views/mustache/property_list.php:275
-#, fuzzy
 msgid "Select"
-msgstr "Válaszd ki a kártyát."
+msgstr "Kiválasztás"
 
 #: ../code/application/controllers/user.php:105
 msgid "Erreur lors de la mise à jour de votre profil."
