--- a/languages/ci/locale/en_CA/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/en_CA/LC_MESSAGES/auberge_lang.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-04 16:40+0200\n"
-"PO-Revision-Date: 2013-03-06 22:09+0200\n"
+"PO-Revision-Date: 2013-03-10 22:11+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -2653,9 +2653,8 @@ msgstr ""
 "deposit?"
 
 #: ../code/application/views/restricted/user_group_quote.php:150
-#, fuzzy
 msgid "Group booking quote information"
-msgstr "Group Booking Request Form"
+msgstr "Group booking quote information"
 
 #: ../code/application/views/restricted/user_group_quote.php:152
 msgid "PLEASE NOTE THIS IS NOT A CONFIRMED BOOKING"
@@ -2686,9 +2685,8 @@ msgstr ""
 "to book!"
 
 #: ../code/application/views/restricted/user_group_quote.php:174
-#, fuzzy
 msgid "Your offers"
-msgstr "Your details"
+msgstr "Your offers"
 
 #: ../code/application/views/restricted/user_group_quote.php:196
 #: ../code/application/views/hb/hostel_view.php:708
@@ -2701,9 +2699,8 @@ msgid "Room description"
 msgstr "Room description"
 
 #: ../code/application/views/restricted/user_group_quote.php:211
-#, fuzzy
 msgid "Price per Person per Night"
-msgstr "Price per room (not per person)."
+msgstr "Price per Person per Night"
 
 #: ../code/application/views/restricted/user_group_quote.php:266
 msgid "Offer Expiry date"
@@ -2723,9 +2720,8 @@ msgid "Special Notes"
 msgstr "Special Notes"
 
 #: ../code/application/views/restricted/user_group_quote.php:303
-#, fuzzy
 msgid "Important Notes"
-msgstr "Important Notice:"
+msgstr "Important Notes"
 
 #: ../code/application/views/restricted/user_group_quote.php:306
 msgid ""
@@ -3153,7 +3149,6 @@ msgstr ""
 "major attractions of %s."
 
 #: ../code/application/views/error400.php:10
-#, fuzzy
 msgid "Erreur 400 - Page Introuvable"
 msgstr "Error 404 - Page Not Found"
 
@@ -3620,9 +3615,8 @@ msgstr "Price per room (not per person)."
 #: ../code/application/views/hw/booking_avail_view.php:385
 #: ../code/application/views/hb/booking_avail_error_view.php:14
 #: ../code/application/views/hb/booking_avail_view.php:295
-#, fuzzy
 msgid "No Beds Found"
-msgstr "No. Beds"
+msgstr "No Beds Found"
 
 #: ../code/application/views/hw/booking_avail_view.php:390
 #: ../code/application/views/hb/booking_avail_error_view.php:21
@@ -4334,9 +4328,9 @@ msgstr "Please take a look at the attached file for more details."
 
 #: ../code/application/views/email/admin/new_group_request.php:10
 #: ../code/application/views/helpfile/pofields.php:576
-#, fuzzy, php-format
+#, php-format
 msgid "Please do not hesitate to contact me if you have any questions."
-msgstr "Please do not hesitate to contact us again if you have any questions."
+msgstr "Please do not hesitate to contact me if you have any questions."
 
 #: ../code/application/views/email/admin/new_group_request.php:12
 #: ../code/application/views/helpfile/pofields.php:163
@@ -5729,9 +5723,9 @@ msgid "Fun"
 msgstr "Fun"
 
 #: ../code/application/views/helpfile/pofields.php:293
-#, fuzzy, php-format
+#, php-format
 msgid "Payer seulement 10%% maintenant"
-msgstr " "
+msgstr " Pay only 10%% now"
 
 #: ../code/application/views/helpfile/pofields.php:294
 #, php-format
@@ -6977,79 +6971,79 @@ msgid "Your changes has been saved successfully"
 msgstr "Your changes has been saved successfully"
 
 #: ../code/application/views/helpfile/pofields.php:609
-#, fuzzy, php-format
+#, php-format
 msgid "Next available property"
-msgstr "No rooms available for this property."
+msgstr "Next available property"
 
 #: ../code/application/views/helpfile/pofields.php:610
-#, fuzzy, php-format
+#, php-format
 msgid "of %s results"
-msgstr "Back to results"
+msgstr "of %s results"
 
 #: ../code/application/views/helpfile/pofields.php:611
-#, fuzzy, php-format
+#, php-format
 msgid "Group Type:"
-msgstr "Groups"
+msgstr "Group Type:"
 
 #: ../code/application/views/helpfile/pofields.php:612
-#, fuzzy, php-format
+#, php-format
 msgid "Age Ranges:"
-msgstr "Price Range:"
+msgstr "Age Ranges:"
 
 #: ../code/application/views/helpfile/pofields.php:613
 #, php-format
 msgid "Choose one..."
-msgstr ""
+msgstr "Choose one…"
 
 #: ../code/application/views/helpfile/pofields.php:614
 #, php-format
 msgid "Holidays with friends"
-msgstr ""
+msgstr "Holidays with friends"
 
 #: ../code/application/views/helpfile/pofields.php:615
 #, php-format
 msgid "Junior/Primary school"
-msgstr ""
+msgstr "Junior/Primary school"
 
 #: ../code/application/views/helpfile/pofields.php:616
 #, php-format
 msgid "High/Secondary school"
-msgstr ""
+msgstr "High/Secondary school"
 
 #: ../code/application/views/helpfile/pofields.php:617
 #, php-format
 msgid "College / University"
-msgstr ""
+msgstr "College / University"
 
 #: ../code/application/views/helpfile/pofields.php:618
-#, fuzzy, php-format
+#, php-format
 msgid "Business trip"
-msgstr "Business Trips"
+msgstr "Business trip"
 
 #: ../code/application/views/helpfile/pofields.php:619
 #, php-format
 msgid "Stag/Hen/Bachelor party"
-msgstr ""
+msgstr "Stag/Hen/Bachelor party"
 
 #: ../code/application/views/helpfile/pofields.php:620
-#, fuzzy, php-format
+#, php-format
 msgid "Sports group"
-msgstr "Sports groups"
+msgstr "Sports group"
 
 #: ../code/application/views/helpfile/pofields.php:621
 #, php-format
 msgid "Cultural group"
-msgstr ""
+msgstr "Cultural group"
 
 #: ../code/application/views/helpfile/pofields.php:622
 #, php-format
 msgid "Please specify a type of group."
-msgstr ""
+msgstr "Please specify a type of group."
 
 #: ../code/application/views/helpfile/pofields.php:623
-#, fuzzy, php-format
+#, php-format
 msgid "Please specify an age range for your group."
-msgstr "We have found a great offer for your group."
+msgstr "Please specify an age range for your group."
 
 #: ../code/application/views/helpfile/pofields.php:624
 #, php-format
@@ -7057,255 +7051,256 @@ msgid "Map"
 msgstr "Map"
 
 #: ../code/application/views/helpfile/pofields.php:626
-#, fuzzy, php-format
+#, php-format
 msgid "Reviews"
-msgstr "Review"
+msgstr "Reviews"
 
 #: ../code/application/views/helpfile/pofields.php:627
 #, php-format
 msgid "Compare"
-msgstr ""
+msgstr "Compare"
 
 #: ../code/application/views/helpfile/pofields.php:628
 #, php-format
 msgid "of"
-msgstr ""
+msgstr "of"
 
 #: ../code/application/views/helpfile/pofields.php:629
 #, php-format
 msgid "Please see selected properties to compare on top of the page."
-msgstr ""
+msgstr "Please see selected properties to compare on top of the page."
 
 #: ../code/application/views/helpfile/pofields.php:633
-#, fuzzy, php-format
+#, php-format
 msgid "Not available"
-msgstr "No dorms available"
+msgstr "Not available"
 
 #: ../code/application/views/helpfile/pofields.php:635
-#, fuzzy, php-format
+#, php-format
 msgid "Print"
-msgstr "Print Now"
+msgstr "Print"
 
 #: ../code/application/views/helpfile/pofields.php:636
 #, php-format
 msgid "Quick Compare"
-msgstr ""
+msgstr "Quick Compare"
 
 #: ../code/application/views/helpfile/pofields.php:637
-#, fuzzy, php-format
+#, php-format
 msgid "Dorms From"
-msgstr "Dorms %s"
+msgstr "Dorms From"
 
 #: ../code/application/views/helpfile/pofields.php:638
-#, fuzzy, php-format
+#, php-format
 msgid "Privates From"
-msgstr "Private rooms"
+msgstr "Privates From"
 
 #: ../code/application/views/helpfile/pofields.php:639
-#, fuzzy, php-format
+#, php-format
 msgid "Rating Overall"
-msgstr "Overall"
+msgstr "Rating Overall"
 
 #: ../code/application/views/helpfile/pofields.php:642
 #, php-format
 msgid "Site"
-msgstr ""
+msgstr "Site"
 
 #: ../code/application/views/helpfile/pofields.php:644
 #, php-format
 msgid "Services"
-msgstr ""
+msgstr "Services"
 
 #: ../code/application/views/helpfile/pofields.php:647
 #, php-format
 msgid "Results"
-msgstr ""
+msgstr "Results"
 
 #: ../code/application/views/helpfile/pofields.php:648
 #, php-format
 msgid "Result"
-msgstr ""
+msgstr "Result"
 
 #: ../code/application/views/helpfile/pofields.php:649
-#, php-format
+#, fuzzy, php-format
 msgid "Only %d properties can be compared"
-msgstr ""
+msgstr "Only 5 properties can be compared"
 
 #: ../code/application/views/helpfile/pofields.php:650
 #, php-format
 msgid "Please remove a property from list."
-msgstr ""
+msgstr "Please remove a property from list."
 
 #: ../code/application/views/helpfile/pofields.php:651
-#, fuzzy, php-format
+#, php-format
 msgid "Quick Compare (5 properties maximum)"
-msgstr "Compare all properties in %s"
+msgstr "Quick Compare (5 properties maximum)"
 
 #: ../code/application/views/helpfile/pofields.php:652
-#, fuzzy, php-format
+#, php-format
 msgid "Remove All"
-msgstr "Remove"
+msgstr "Remove All"
 
 #: ../code/application/views/helpfile/pofields.php:653
 #, php-format
 msgid "Please see selected properties to compare on top of this page."
-msgstr ""
+msgstr "Please see selected properties to compare on top of this page."
 
 #: ../code/application/views/helpfile/pofields.php:654
 #, php-format
 msgid "%d Results"
-msgstr ""
+msgstr "%d Results"
 
 #: ../code/application/views/helpfile/pofields.php:655
-#, fuzzy, php-format
+#, php-format
 msgid "of %d results"
-msgstr "Back to results"
+msgstr "of %d results"
 
 #: ../code/application/views/helpfile/pofields.php:656
-#, fuzzy, php-format
+#, php-format
 msgid "Home"
-msgstr "Home Page"
+msgstr "Home"
 
 #: ../code/application/views/helpfile/pofields.php:657
 #, php-format
 msgid "Restore Everything"
-msgstr ""
+msgstr "Restore Everything"
 
 #: ../code/application/views/helpfile/pofields.php:659
 #, php-format
 msgid "Compare (%d out of %d)"
-msgstr ""
+msgstr "Compare (%d out of %d)"
 
 #: ../code/application/views/helpfile/pofields.php:661
 #, php-format
 msgid "Show More"
-msgstr ""
+msgstr "Show More"
 
 #: ../code/application/views/helpfile/pofields.php:662
 #, php-format
 msgid "Show Less"
-msgstr ""
+msgstr "Show Less"
 
 #: ../code/application/views/helpfile/pofields.php:663
 #, php-format
 msgid "Not enough parameters"
-msgstr ""
+msgstr "Not enough parameters"
 
 #: ../code/application/views/helpfile/pofields.php:664
-#, fuzzy, php-format
+#, php-format
 msgid "Fill in the email"
-msgstr "Print the map"
+msgstr "Fill in the email"
 
 #: ../code/application/views/helpfile/pofields.php:665
 #, php-format
 msgid "Invalid email recipient"
-msgstr ""
+msgstr "Invalid email recipient"
 
 #: ../code/application/views/helpfile/pofields.php:666
 #, php-format
 msgid "Fill in the subject"
-msgstr ""
+msgstr "Fill in the subject"
 
 #: ../code/application/views/helpfile/pofields.php:667
 #, php-format
 msgid "Fill in the message"
-msgstr ""
+msgstr "Fill in the message"
 
 #: ../code/application/views/helpfile/pofields.php:668
 #, php-format
 msgid "Fill in the \"From\" name"
-msgstr ""
+msgstr "Fill in the \"From\" name"
 
 #: ../code/application/views/helpfile/pofields.php:669
 #, php-format
 msgid "Fill in the \"From\" email"
-msgstr ""
+msgstr "Fill in the \"From\" email"
 
 #: ../code/application/views/helpfile/pofields.php:670
-#, fuzzy, php-format
+#, php-format
 msgid "Invalid \"From\" email"
-msgstr "Invalid format"
+msgstr "Invalid \"From\" email"
 
 #: ../code/application/views/helpfile/pofields.php:671
-#, fuzzy, php-format
+#, php-format
 msgid "Your message has been sent to %s"
-msgstr "An email has been sent to your address."
+msgstr "Your message has been sent to %s"
 
 #: ../code/application/views/helpfile/pofields.php:672
 #, php-format
 msgid "From:"
-msgstr ""
+msgstr "From:"
 
 #: ../code/application/views/helpfile/pofields.php:673
-#, fuzzy, php-format
+#, php-format
 msgid "To:"
-msgstr "Total:"
+msgstr "To:"
 
 #: ../code/application/views/helpfile/pofields.php:674
 #, php-format
 msgid "Subject:"
-msgstr ""
+msgstr "Subject:"
 
 #: ../code/application/views/helpfile/pofields.php:675
-#, fuzzy, php-format
+#, php-format
 msgid "Message:"
-msgstr "Message"
+msgstr "Message:"
 
 #: ../code/application/views/helpfile/pofields.php:676
 #, php-format
 msgid "Send another message"
-msgstr ""
+msgstr "Send another message"
 
 #: ../code/application/views/helpfile/pofields.php:678
 #, php-format
 msgid ""
 "Mail this page to someone you know, or send it to yourself as a reminder."
 msgstr ""
+"Mail this page to someone you know, or send it to yourself as a reminder."
 
 #: ../code/application/views/helpfile/pofields.php:679
 #, php-format
 msgid "To (email)"
-msgstr ""
+msgstr "To (email)"
 
 #: ../code/application/views/helpfile/pofields.php:680
 #, php-format
 msgid "Subject"
-msgstr ""
+msgstr "Subject"
 
 #: ../code/application/views/helpfile/pofields.php:682
-#, fuzzy, php-format
+#, php-format
 msgid "From (name)"
-msgstr "First name"
+msgstr "From (name)"
 
 #: ../code/application/views/helpfile/pofields.php:683
 #, php-format
 msgid "From (email)"
-msgstr ""
+msgstr "From (email)"
 
 #: ../code/application/views/helpfile/pofields.php:684
 #, php-format
 msgid "Yes, I want to subscribe to the newsletter."
-msgstr ""
+msgstr "Yes, I want to subscribe to the newsletter."
 
 #: ../code/application/views/helpfile/pofields.php:685
-#, fuzzy, php-format
+#, php-format
 msgid "Send email"
-msgstr "Send E-mail"
+msgstr "Send email"
 
 #: ../code/application/views/helpfile/pofields.php:687
 #, php-format
 msgid "Share PDF"
-msgstr ""
+msgstr "Share PDF"
 
 #: ../code/application/views/helpfile/pofields.php:688
 #, php-format
 msgid "Want to send a PDF copy of this page or quote by email?"
-msgstr ""
+msgstr "Want to send a PDF copy of this page or quote by email?"
 
 #: ../code/application/views/helpfile/pofields.php:689
-#, fuzzy, php-format
+#, php-format
 msgid "Send PDF"
-msgstr "Send"
+msgstr "Send PDF"
 
 #: ../code/application/views/helpfile/pofields.php:691
 #, php-format
@@ -7314,6 +7309,9 @@ msgid ""
 "continuing to browse our site you are agreeing to our Cookies Policy and use "
 "of cookies technology. Find out more"
 msgstr ""
+"We use cookies to give you the best possible experience on our site. By "
+"continuing to browse our site you are agreeing to our Cookies Policy and use "
+"of cookies technology. Find out more"
 
 #: ../code/application/views/home_view.php:15
 msgid "30,000 Auberges et logements pas chers"
@@ -7355,9 +7353,8 @@ msgstr "More info about this property"
 
 #: ../code/application/views/mustache/property_list.php:264
 #: ../code/application/views/mustache/property_list.php:275
-#, fuzzy
 msgid "Select"
-msgstr "Select card"
+msgstr "Select"
 
 #: ../code/application/controllers/user.php:105
 msgid "Erreur lors de la mise à jour de votre profil."
@@ -7433,9 +7430,8 @@ msgid "Serveur inaccessible pour le moment. Veuillez réessayer de nouveau."
 msgstr "Server unreachable for the moment. Please try again."
 
 #: ../code/application/controllers/cadmin.php:22
-#, fuzzy
 msgid "Beds"
-msgstr "No. Beds"
+msgstr "Beds"
 
 #: ../code/application/controllers/cadmin.php:28
 msgid "Nights"
